--- a/env.yml
+++ b/env.yml
@@ -1,4 +1,4 @@
-name: crawler
+name: crawler3
 channels:
 - defaults
 dependencies:
@@ -11,3 +11,4 @@ dependencies:
 - pandas
 - pip
 - scipy
+- pytz
