--- a/env.yml
+++ b/env.yml
@@ -1,14 +1,8 @@
-name: crawler3
+name: crawler
 channels:
 - defaults
 dependencies:
 - python=3.6
-- ipython
-- jupyter
-- matplotlib
-- notebook
-- numpy
-- pandas
 - pip
 - scipy
 - pytz
