--- a/env.yml
+++ b/env.yml
@@ -1,8 +1,11 @@
-name: crawler
+name: crawler3
 channels:
 - defaults
 dependencies:
 - python=3.6
+- ipython
+- jupyter
+- notebook
 - pip
 - scipy
 - pytz
